my-apps/media/cobalt/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt
  namespace: cobalt
spec:
  sessionAffinity: ClientIP
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
  selector:
    app.kubernetes.io/name: cobalt
