my-apps/media/cobalt/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cobalt-web
  namespace: cobalt
spec:
  selector:
    app.kubernetes.io/name: cobalt-web
  ports:
    - name: http
      port: 8787
      targetPort: 8787
      protocol: TCP
