my-apps/media/cobalt/web-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cobalt-web
  namespace: cobalt
  labels:
    external-dns: "true"
  annotations:
    external-dns.alpha.kubernetes.io/target: "vanillax.me"
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: gateway-external
    namespace: gateway
    sectionName: https
  hostnames:
  - dl.vanillax.me
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - group: ""
      kind: Service
      name: cobalt-web
      port: 8787
      weight: 1
